fixed pre tags wrapping

--- a/css/single.css
+++ b/css/single.css
@@ -199,6 +199,15 @@ header img {
 		width: 100%;
 	}
 
+	#main pre {
+		width: 100%;
+		white-space: pre-wrap;       /* css-3 */
+		white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+		white-space: -pre-wrap;      /* Opera 4-6 */
+		white-space: -o-pre-wrap;    /* Opera 7 */
+		word-wrap: break-word;       /* Internet Explorer 5.5+ */
+	}
+
 	#main h2 {
 		margin-top: 1em;
 		font-size: 1em;
